create a landing page with index html and css

--- a/index.html
+++ b/index.html
@@ -6,8 +6,134 @@
     <title>The MidnightNation</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
-<p> je teste pour voir</p>
+    <header>
+        <nav>
+            <div class="logo">The MidnightNation</div>
+            <ul class="nav-links">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#contact">Contact</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home" class="hero">
+            <h1>The MidnightNation</h1>
+            <p><i>Horror just a click away</i></p>
+            <a href="#" class="btn">Order Now</a>
+        </section>
+
+        <section class="intro">
+            <div class="intro-content">
+                <img src="img/logoMN.png" alt="Logo" class="intro-logo">
+                <p class="intro-text">Welcome to The MidnightNation, your go-to destination for all things horror. Explore our wide range of products and experience the thrill.</p>
+            </div>
+        </section>
+
+        <section id="products" class="features">
+            <div class="feature">
+                <h2>Secure Registration & Login</h2>
+                <p>Register and log in securely to access exclusive content and offers.</p>
+                <img src="img/login.png" alt="Secure Login" class="feature-image">
+            </div>
+            <div class="feature">
+                <h2>Exclusive MidnightNation Merchandise</h2>
+                <p>Discover a variety of items representing MidnightNation. Original and stylish merchandise.</p>
+                <div class="feature-images">
+                    <img src="img/goodies3.png" alt="Merchandise 1" class="feature-image">
+                    <img src="img/goodies8.png" alt="Merchandise 2" class="feature-image">
+                </div>
+            </div>
+            <div class="feature">
+                <h2>Secure Payment</h2>
+                <p>Your information is safe with us</p>
+                <img src="img/Paypal_2014_logo.png" alt="PayPal Logo" class="feature-image">
+            </div>
+        </section>
+
+        <section id="contact" class="testimonials">
+            <h2>Customer Testimonials</h2>
+            <div class="testimonials-container">
+                <div class="testimonial">
+                    <p>"Excellent service and quality products!"</p>
+                    <span>- Satisfied Customer</span>
+                    <div class="rating">
+                        <span>&#9733;</span>
+                        <span>&#9733;</span>
+                        <span>&#9733;</span>
+                        <span>&#9733;</span>
+                        <span>&#9733;</span>
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <p>"Fast delivery and very responsive customer service."</p>
+                    <span>- Happy Customer</span>
+                    <div class="rating">
+                        <span>&#9733;</span>
+                        <span>&#9733;</span>
+                        <span>&#9733;</span>
+                        <span>&#9733;</span>
+                        <span>&#9734;</span> <!-- Une étoile vide -->
+                    </div>
+                </div>
+                <div class="testimonial">
+                    <p>"Great experience overall!"</p>
+                    <span>- Pleased Customer</span>
+                    <div class="rating">
+                        <span>&#9733;</span>
+                        <span>&#9733;</span>
+                        <span>&#9733;</span>
+                        <span>&#9734;</span> <!-- Deux étoiles vides -->
+                        <span>&#9734;</span>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="about" class="about">
+            <h2>About Us</h2>
+            <div class="about-content">
+                <div class="about-item">
+                    <img src="img/homme.png" alt="Image 1" class="about-image">
+                    <p class="about-text">This project is rewarding and allows me to raise the profile of the community</p>
+                    <a href="https://github.com/mickaeltartar" class="about-link">Visit GitHub</a><br />
+                    <a href="https://github.com/mickaeltartar/MidnightNation" class="about-link">Visit GitHub Project</a>
+                </div>
+                <div class="about-item">
+                    <img src="img/femme.png" alt="Image 2" class="about-image">
+                    <p class="about-text">I'm proud to be part of this project and to make my contribution to this community.</p>
+                    <a href="https://github.com/lucieruin" class="about-link">Visit GitHub</a><br />
+                    <a href="https://github.com/mickaeltartar/MidnightNation" class="about-link">Visit GitHub Project</a><br />
+                    <a href="https://www.linkedin.com/in/lucie-ruin-449a44296/" class="about-link">Visit LinkedIn</a>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 The MidnightNation. All rights reserved.</p>
+        <ul class="nav justify-content-center">
+            <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="https://www.twitch.tv/themidnightnation">Twitch</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://discord.gg/qPrVMF7sR7">Discord</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.tiktok.com/@themidnightnation_khar">TikTok</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://ko-fi.com/themidnghtnation">Ko-fi</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="https://www.youtube.com/@Kharvonarkh">Youtube</a>
+            </li>
+        </ul>
+    </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
 </html>
